# phantom-mesh

./: .gitignore  1,  Cargo.toml  Makefile  README.md  dga_check.rs
.cargo/: config.toml
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: server.rs
crates/bot/: Cargo.toml
crates/bot/src/: commands.rs  main.rs
crates/bot/src/common/: constants.rs  mod.rs
crates/bot/src/host/: logic.rs  process.rs  syscalls.rs
crates/bot/src/modules/: mod.rs
crates/bot/src/modules/ddos/: mod.rs
crates/bot/src/modules/ddos/layer4/: headers.rs  mod.rs  pps.rs  tcp.rs  udp.rs
crates/bot/src/modules/ddos/layer7/: http.rs  http2.rs  mod.rs  slow.rs
crates/bot/src/modules/miner/: config.rs  install.rs  mod.rs  status.rs
crates/bot/src/modules/ransomware/: crypto.rs  encrypt.rs  mod.rs  note.rs  scan.rs  system.rs
crates/core/common/: Cargo.toml
crates/core/common/src/: discovery.rs  lib.rs  oracle.rs  time.rs
crates/core/protocol/src/: crypto.rs  lib.rs  packet.rs
crates/ghost/: Cargo.toml
crates/ghost/src/: network.rs
crates/node/src/system/: c2.rs
crates/nodes/cloud/: Makefile  main.c  mirai_lite  test_parser.c
crates/nodes/cloud/include/: protocol_defs.h
crates/nodes/cloud/modules/attack/: attack.c  attack.h
crates/nodes/cloud/modules/attack/methods/: ack.c  app.c  dns.c  ntp.c  sack.c  socket.c  syn.c  tcp.c  udp.c  vse.c
crates/nodes/cloud/modules/crypto/: verify.c  verify.h
crates/nodes/cloud/modules/network/dns/: dga.c  dga.h  dns.c  dns.h
crates/nodes/cloud/modules/network/p2p/: p2p.c  p2p.h
crates/nodes/cloud/modules/network/proto/: mqtt_parser.c  mqtt_parser.h
crates/nodes/cloud/modules/network/proxy/: proxy.c  proxy.h
crates/nodes/cloud/modules/network/scanner/: scanner.c  scanner.h
crates/nodes/cloud/modules/system/killer/: killer.c  killer.h
crates/nodes/cloud/modules/system/obfuscate/: obfuscate.c  obfuscate.h
crates/nodes/cloud/modules/system/stealth/: stealth.c  stealth.h
crates/nodes/cloud/src/: protocol.zig
crates/nodes/cloud/src/attack/: dns_amp.zig  mod.zig  ntp.zig  sack.zig  socket.zig  syn.zig  udp.zig  vse.zig
crates/nodes/cloud/src/crypto/: mod.zig
crates/nodes/cloud/src/network/: p2p.zig  scanner.zig
crates/nodes/edge/: Cargo.toml
crates/nodes/edge/src/: bootstrapper.rs  client.rs  lib.rs  main.rs
crates/nodes/edge/src/c2/: listener.rs  state.rs
crates/nodes/edge/src/config/: constants.rs
crates/nodes/edge/src/core/: debug.rs  dedup.rs  mod.rs  runtime.rs
crates/nodes/edge/src/crypto/: magic.rs
crates/nodes/edge/src/discovery/: election.rs  eth_listener.rs  oracle.rs  zero_noise.rs
crates/nodes/edge/src/helpers/: mod.rs
crates/nodes/edge/src/modules/: bridge.rs  election.rs  eth_listener.rs  local_comm.rs  mod.rs  network_watchdog.rs  plugin_manager.rs  zero_noise_discovery.rs
crates/nodes/edge/src/modules/windows/: ads.rs  hollow.rs  mod.rs  persistence.rs
crates/nodes/edge/src/network/: bridge.rs  client.rs  local_comm.rs  mod.rs  multi_cloud.rs  watchdog.rs
crates/nodes/edge/src/network/bootstrap/: blockchain.rs  dga.rs  mod.rs  reddit.rs
crates/nodes/edge/src/p2p/: c2.rs  dht.rs  transport.rs
crates/nodes/edge/src/plugins/: manager.rs  mod.rs  native_library.rs
crates/nodes/edge/src/stealth/linux/: ebpf.rs  hijack.rs  memfd.rs  mod.rs  persistence.rs
crates/nodes/edge/src/stealth/linux/bpf/: stealth.bpf.c
crates/nodes/edge/src/stealth/windows/: ads.rs  anti_analysis.rs  api_resolver.rs  blinding.rs  ghosting.rs  ipc.rs  mod.rs  obfuscation.rs  persistence.rs  registry.rs  self_delete.rs  stack_spoof.rs  syscalls.rs
crates/nodes/edge/src/stealth/windows/edge_update_svc/src/: lib.rs
crates/nodes/edge/src/stealth/windows/loader/: Cargo.toml
crates/nodes/edge/src/stealth/windows/loader/src/: main.rs
crates/nodes/edge/src/stealth/windows/loader_dll/: Cargo.toml
crates/nodes/master/: Cargo.toml
crates/nodes/master/src/: commands.rs  network.rs
crates/nodes/master/src/discovery/: oracle.rs
crates/nodes/mesh/: Cargo.toml
crates/nodes/mesh/src/: main.rs
crates/nodes/mesh/src/config/: constants.rs  crypto.rs
crates/nodes/mesh/src/discovery/: oracle.rs  parasitic.rs
crates/nodes/mesh/src/helpers/: files.rs  mod.rs
crates/nodes/mesh/src/host/: logic.rs  network.rs  process.rs  registry.rs  shadow.rs  syscalls.rs
crates/nodes/mesh/src/logic/: flooding.rs
crates/nodes/mesh/src/modules/: plugin_manager.rs
crates/nodes/mesh/src/p2p/: c2.rs  commands.rs  dht.rs  mod.rs  signaling.rs  transport.rs
crates/nodes/mesh/src/security/: anti_analysis.rs
crates/nodes/phantom/: Cargo.toml
crates/nodes/phantom/src/: commands.rs  crypto.rs  dga.rs  eth_broadcaster.rs  main.rs  network.rs  p2p.rs  server.rs
crates/nodes/phantom/src/crypto/: magic.rs  mod.rs
crates/nodes/phantom/src/network/: dga.rs  mod.rs  p2p.rs
crates/nodes/phantom/src/ssh/: mod.rs  server.rs
crates/plugins/cryptojacking/src/: lib.rs
crates/plugins/ddos/src/: lib.rs
crates/plugins/keylogger/src/: lib.rs
crates/plugins/propagator/src/: main.rs
crates/plugins/propagator/src/modules/bruteforce/: transport.rs
crates/protocol/src/: lib.rs
crates/shared/protocol/: Cargo.toml
crates/shared/protocol/src/: p2p.rs  uplink.rs  wire.rs
crates/tools/dns_signer/src/: main.rs
crates/tools/loader/src/: scanner.rs
crates/tools/log_viewer/src/: main.rs
docs/: ARCHITECTURE.md  BEHAVIORAL_DETECTION_REPORT.md  WACATAC_DETECTION_ANALYSIS.md
scripts/: generate.sh  setup_toolchains.sh
test/: .env
tools/: steg_maker.rs
