[package]
name = "bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
arti = "1.8.0"
base64 = "0.22.1"
chrono = "0.4.42"
dashmap = "6.1.0"
ed25519-dalek = "2.2.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.29"
protocol = { version = "0.1.0", path = "../protocol" }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
x25519-dalek = "2.0.1"
