[package]
name = "ghost"
version = "0.1.0"
edition = "2024"

[dependencies]
arti = "1.8.0"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures-util = "0.3.31"
hex = "0.4.3"
protocol = { version = "0.1.0", path = "../protocol" }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
uuid = { version = "1.19.0", features = ["v4"] }
x25519-dalek = "2.0.1"
