[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["time"] }

# Time Sync
sntpc = { version = "0.3.6", features = ["std", "utils"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

# Discovery
sha1 = "0.10"
