[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["time"] }

# Time Sync
sntpc = { version = "0.3.6", features = ["std", "utils"] }
# reqwest removed for Zero-Dependency
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Discovery
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
mainline = "1.0"
