[package]
name = "edge_implant"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] } # For DoH
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
socket2 = "0.5"

# Internal Crate Dependencies
common = { path = "../../core/common" }
protocol = { path = "../../core/protocol" }
