[package]
name = "edge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"
socket2 = "0.5"
async-trait = "0.1"
pnet = "0.34"
# Windows API for Named Pipes



# Internal Crate Dependencies


protocol = { path = "../../shared/protocol" }
plugin_api = { path = "../../shared/plugin_api" }
libloading = "0.8"

# Windows API for Named Pipes
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_System_Pipes",
    "Win32_Security", 
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus"
] }
