[package]
name = "phantom_master"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
tokio = { version = "1", features = ["full", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6.4"
base64 = "0.21"
hex = "0.4"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
sha2 = "0.10"

# Discovery
chrono = "0.4"
sha1 = "0.10"
mainline = "1.0"

# Internal
protocol = { path = "../../core/protocol" }
common = { path = "../../core/common" }

# WebSocket
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

futures-util = "0.3"
url = "2.5"
sntpc = { version = "0.3.6", features = ["std", "utils"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
