[package]
name = "phantom_mesh"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1", features = ["full", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
obfstr = "0.4.4"
chrono = "0.4"
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10" # Discovery
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.29"
tokio-tungstenite = "0.20"
once_cell = "1.18"
num_cpus = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
socket2 = "0.6.1"
tokio-native-tls = "0.3.1"

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"
rand_core = "0.6.4"

# Tor Removed

# Discovery
mainline = "1.0"

# Internal
protocol = { path = "../../core/protocol" }
common = { path = "../../core/common" }

# Utils
zip = "0.6"
lru = "0.16.2"
sntpc = { version = "0.3.6", features = ["std", "utils"] }
rayon = "1.11.0"
walkdir = "2.5.0"
local-ip-address = "0.6.8"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring", "logging", "std", "tls12"] }
snow = "0.10.0"
rcgen = "0.14.6"
bytes = "1.11.0"
tokio-rustls = "0.24"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
ntapi = "0.4"
winapi = { version = "0.3", features = [
    "processthreadsapi", 
    "winbase", 
    "shellapi",
    "winuser",
    "handleapi",
    "winnt",
    "jobapi2",
    "wincon",
    "memoryapi",
    "tlhelp32",
    "minwindef",
    "errhandlingapi"
] }
