[package]
name = "phantom"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
ed25519-dalek = "2.1"
clap = { version = "4.0", features = ["derive"] }
# Local dependencies
common = { path = "../../core/common" }
protocol = { path = "../../core/protocol" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
